--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
 
     <script src="https://kit.fontawesome.com/12243e8866.js" crossorigin="anonymous"></script>
     {#linkul de mai sus este pt a folosi icon din libraria font aswesome#}
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+    {#script pt jquery#}
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
+{#    framework peste javascript care stie sa interactioneze si sa adauge controale de html#}
 </head>
 <body>
 <div class="wrapper">
