--- a/templates/userextend/mail_create_new_user.html
+++ b/templates/userextend/mail_create_new_user.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <p>Hello, {{ full_name }}</p>
+<p>Welcome to Inside Tennis World!</p>
 <p> Your username is: {{ username }}</p>
 </body>
 </html>
