--- a/static/style/style.css
+++ b/static/style/style.css
@@ -2,6 +2,14 @@ body, html {
     height: 100%;
 }
 
+.logo-image{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-top: -6px;
+    }
+
 .bg-img-homepage {
     background: url("/static/images/tennis_img.jpg") no-repeat center center fixed;
     background-size: cover;
