--- a/static/style/style.css
+++ b/static/style/style.css
@@ -3,11 +3,11 @@ body, html {
 }
 
 .logo-image{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-top: -6px;
+    width: 40px;
+    height: 40px;
+    border-radius: 60%;
+    /*overflow: hidden;*/
+    /*margin-top: -6px;*/
     }
 
 .bg-img-homepage {
@@ -51,17 +51,13 @@ body{
  .footer {
      position: absolute;
      color: black!important;
-     /*bottom: 0;*/
-     /*left: 0;*/
      opacity: 0.7;
-     /*right: 0;*/
      background-image: url("/static/images/tennis_img.jpg");
      height: auto;
      width: 100%;
      font-family: "Open Sans", ui-sans-serif;
      padding-top: 20px;
      padding-left: 60px;
-     /*background-color: grey!important;*/
  }
 
  .footer-col {
