--- a/templates/cart/show_cart.html
+++ b/templates/cart/show_cart.html
@@ -72,7 +72,7 @@
               <div class="d-flex">
                 <div class="text-right mt-4 mr-5">
                   <label class="text-muted font-weight-normal m-0">Discount</label>
-                  <div class="text-large"><strong>$0</strong></div>
+                  <div class="text-large"><strong>0 LEI</strong></div>
                 </div>
                 <div class="text-right mt-4">
                   <label class="text-muted font-weight-normal m-0">Total price</label>
@@ -80,7 +80,6 @@
                 </div>
               </div>
             </div>
-
             <div class="float-right">
               <button type="button" class="btn btn-lg btn-default md-btn-flat mt-2 mr-3">Back to shopping</button>
               <button type="button" class="btn btn-lg btn-primary mt-2">Checkout</button>
