--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: mintcream">
     <div class="container-fluid">
         <a class="logo-image" href="#">
-            <img src="static/images/logo.png" style="display: inline-block;">
+            <img class="logo-image" src="{% static 'images/logo.png' %}" style="display: inline-block;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
