--- a/templates/base.html
+++ b/templates/base.html
@@ -1,24 +1,50 @@
-{%  load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %} {% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
+
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/12243e8866.js" crossorigin="anonymous"></script>
-    {#linkul de mai sus este pt a folosi icon din libraria font aswesome#}
-    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js" integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
-    {#script pt jquery#}
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js" integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
-{#    framework peste javascript care stie sa interactioneze si sa adauge controale de html#}
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
+            integrity="sha256-w8CvhFs7iHNVUtnSP0YKEg00p9Ih13rlL9zGqvLdePA=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"
+            integrity="sha256-lSjKY0/srUM9BE3dPm+c4fBo1dky2v27Gdjm2uoZaL0=" crossorigin="anonymous"></script>
+
+    <!-- Fundal dinamic -->
+    <style>
+      body {
+        {% if request.path == '/players/' %}
+          background: url("{% static 'images/fundal_players.jpg' %}") center/cover no-repeat fixed;
+          backdrop-filter: blur(1.5px);
+          color: white;
+        {% elif request.path == '/' %}
+          background: url("{% static 'images/background.jpg' %}") center/cover no-repeat fixed;
+          color: white;
+        {% else %}
+          background-color: white;
+          color: black;
+        {% endif %}
+      }
+    </style>
+
+    <!-- Stil personalizat -->
+    <link rel="stylesheet" href="{% static 'style/style.css' %}">
 </head>
+
 <body>
 <div class="wrapper">
     {% include 'navbar.html' %}
-    {% block content %} {% endblock %}
+    {% block content %}{% endblock %}
 </div>
+
 <footer class="footer">
     <div class="footer-content">
         <div class="row">
@@ -51,11 +77,13 @@
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
                     <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
         </div>
     </div>
 </footer>
-</body>
+
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
@@ -63,7 +91,5 @@
         integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
         crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="{% static 'style/style.css' %}"/>
+</body>
 </html>
-
-<!--check check-->
