--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,111 +1,100 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: mintcream">
-    <div class="container-fluid">
-        <a class="logo-image" href="#">
-            <img class="logo-image" src="{% static 'images/logo.png' %}" style="display: inline-block;">
+  <div class="container-fluid">
+    <a class="logo-image" href="{% url 'homepage' %}">
+      <img class="logo-image" src="{% static 'images/logo.png' %}" style="display: inline-block;">
+    </a>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+             aria-expanded="false">Players</a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'all_players' %}">Players</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+             aria-expanded="false">Store</a>
+          <ul class="dropdown-menu">
+
+            <li><a class="dropdown-item" href="{% url 'all_products' %}">All Products</a></li>
+
+            <li class="dropdown-submenu">
+              <a class="dropdown-item" href="{% url 'all_gender_clothes' %}">Clothes</a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-submenu">
+                  <a class="dropdown-item" href="{% url 'clothes' gender='F' %}">Women</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'filtered_products' gender='F' prod_type='T-Shirt' %}">T-Shirts</a></li>
+                    <li><a class="dropdown-item" href="{% url 'filtered_products' gender='F' prod_type='Short' %}">Shorts</a></li>
+                    <li><a class="dropdown-item" href="{% url 'filtered_products' gender='F' prod_type='Skirt' %}">Skirts</a></li>
+                  </ul>
+                </li>
+                <li class="dropdown-submenu">
+                  <a class="dropdown-item" href="{% url 'clothes' gender='M' %}">Men</a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{% url 'filtered_products' gender='M' prod_type='T-Shirt' %}">T-Shirts</a></li>
+                    <li><a class="dropdown-item" href="{% url 'filtered_products' gender='M' prod_type='Short' %}">Shorts</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+
+            <li class="dropdown-submenu">
+              <a class="dropdown-item" href="{% url 'accessories_by_name' acc_name='all' %}">Accessories</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'accessories_by_name' acc_name='Racket' %}">Rackets</a></li>
+                <li><a class="dropdown-item" href="{% url 'accessories_by_name' acc_name='Headband' %}">Headbands</a></li>
+              </ul>
+            </li>
+
+          </ul>
+        </li>
+
+        {% if request.user.is_staff %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'product_administration' %}">Administration</a>
+          </li>
+        {% endif %}
+      </ul>
+
+      <!-- Cart -->
+      <div class="btn-group me-3">
+        <a href="{% url 'show_cart' %}">
+          <i class="fa-solid fa-cart-shopping" style="font-size: 2rem; color:#000000;"></i>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Players
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'all_players' %}">Players</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle"
-                       role="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        Store
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{% url 'all_products' %}">All Products</a>
-                        <li><a class="dropdown-item" href="{% url 'all_gender_clothes' %}">Clothes</a>
-                            <ul class="dropdown-submenu">
-                                <li><a class="dropdown-item" href="{% url 'clothes' gender='F' %}">Women</a>
-                                    <ul class="dropdown-submenu">
-                                        <li><a class="dropdown-item"
-                                               href="{% url 'filtered_products' gender='F' prod_type='T-Shirt' %}">T-Shirts</a>
-                                        </li>
-                                        <li><a class="dropdown-item"
-                                               href="{% url 'filtered_products' gender='F' prod_type='Short' %}">Shorts</a>
-                                        </li>
-                                        <li><a class="dropdown-item"
-                                               href="{% url 'filtered_products' gender='F' prod_type='Skirt' %}">Skirts</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a class="dropdown-item" href="{% url 'clothes' gender='M' %}">Men</a>
-                                </li>
-                                <ul class="dropdown-submenu">
-                                    <li><a class="dropdown-item"
-                                           href="{% url 'filtered_products' gender='M' prod_type='T-Shirt' %}">T-Shirts</a>
-                                    </li>
-                                    <li><a class="dropdown-item"
-                                           href="{% url 'filtered_products' gender='M' prod_type='Short' %}">Shorts</a>
-                                    </li>
-                                </ul>
-                            </ul>
-                        <li><a class="dropdown-item"
-                               href="{% url 'accessories_by_name' acc_name='all' %}">Accessories</a>
-                            <ul class="dropdown-submenu">
-                                <li><a class="dropdown-item"
-                                       href="{% url 'accessories_by_name' acc_name='Racket' %}">Rackets</a>
-                                </li>
-                                <li><a class="dropdown-item"
-                                       href="{% url 'accessories_by_name' acc_name='Headband' %}">Headbands</a>
-                                </li>
-                            </ul>
-                        </li>
-                        </li>
-                    </ul>
-                </li>
-                {% if perms.store.add_storeclothes or perms.store.create_storeaccessories or perms.store.change_storeclothes or perms.store.delete_storeclothes or perms.store.create_storeaccessories or perms.store.change_storeaccessories or store.delete_storeaccessories %}
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'product_administration' %}">Administration</a>
-                    </li>
-                {% endif %}
-            </ul>
+      </div>
 
-
-            <div class="btn-group">
-                <a href="{% url 'show_cart' %}" aria-expanded="false">
-                    {#                    <img src="{% static 'images/shopping_cart_img.png' %}" style="width: 40px" class="rounded-circle">#}
-                    <i class="fa-solid fa-cart-shopping" style="font-size: 2rem; color:#000000;"></i>
-                    {#                    Cart#}
-                </a>
-            </div>
-
-            {#        Login and auth#}
-
-            {% if request.user.is_authenticated %}
-                <div class="btn-group">
-                    <a href="#" type="button" data-bs-toggle="dropdown"
-                       aria-expanded="false">
-                        {#                        My profile, {{ request.user.username }}#}
-                        <img src="{% static 'images/my_profile_icon.png' %}" style="width: 40px" class="rounded-circle">
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
-                        <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
-                    </ul>
-                </div>
-            {% else %}
-                <a href="{% url 'login' %}" class="btn btn-outline-success me-2">Login</a>
-                <a href="{% url 'sign_up' %}" class="btn btn-outline-secondary">Sign up</a>
-            {% endif %}
-
+      <!-- Login / Register -->
+      {% if request.user.is_authenticated %}
+        <div class="btn-group">
+          <a href="#" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <img src="{% static 'images/my_profile_icon.png' %}" style="width: 40px" class="rounded-circle">
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li><a class="dropdown-item" href="{% url 'password_change' %}">Change password</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+          </ul>
         </div>
+      {% else %}
+        <a href="{% url 'login' %}" class="btn btn-outline-success me-2">Login</a>
+        <a href="{% url 'sign_up' %}" class="btn btn-outline-secondary">Sign up</a>
+      {% endif %}
+
     </div>
+  </div>
 </nav>
